<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hobot_visualization</name>
  <version>2.0.1</version>
  <description>TogetheROS hobot ai_msgs to visualization_msgs</description>
  <maintainer email="zixi01.chen@horizon.ai">zixi01.chen</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclcpp</depend>
  <depend>ai_msgs</depend>
  <depend>visualization_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
